# LinuxCrypter

./: .gitignore  CMakeLists.txt  Makefile  README.md  crypter.c  crypter.h  elf_utils.c  elf_utils.h  encryption.c  encryption.h  file.c  file.h  main.c  stub.c
tests/: CMakeLists.txt  elf_utils_tests.cpp  encryption_tests.cpp  file_tests.cpp
tests/testfiles/file_tests/: existing.txt
tests/testfiles/file_tests/expected/: existing1.txt  existing2.txt  new_file2.txt
